# EnvX

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
envx/: __init__.py  agent.py  cli.py
tests/: test_envx.py
tests/test_project/: README.md  requirements.txt  train.py
